<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff" >

        <!-- Edit Treatment Form -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Medication Name Label -->

            <TextView
                style="@style/label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/medication_name" />

            <EditText
                android:id="@+id/edit_treatment_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="text"
                android:singleLine="true" />

            <!-- Responsible Person Label -->

            <TextView
                style="@style/label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/responsible_person" />

            <Button
                android:id="@+id/select_persons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/none"
                android:textColor="@color/orange3" />

            <!-- From Label -->


            <!-- Start Time Label -->

            <TextView
                style="@style/label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_time" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="selectStartTime" >

                <Button
                    android:id="@+id/select_start_time_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/at_start_time_text"
                    android:layout_toRightOf="@+id/at_start_time_text"
                    android:cropToPadding="true"
                    android:onClick="selectStartTime"
                    android:text="@string/set"
                    android:textColor="@color/orange3" />

                <EditText
                    android:id="@+id/at_start_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:inputType="date" />
            </RelativeLayout>

            <!-- To Label -->

            <TextView
                style="@style/label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/to" />

            <Button
                android:id="@+id/select_end_date_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:cropToPadding="true"
                android:onClick="selectEndDate"
                android:text="@string/set_end_date"
                android:textColor="@color/orange3" />

            <!-- End Time Label -->

            <TextView
                style="@style/label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_time" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="selectEndTime" >

                <Button
                    android:id="@+id/select_end_time_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/at_end_time_text"
                    android:layout_toRightOf="@+id/at_end_time_text"
                    android:cropToPadding="true"
                    android:onClick="selectEndTime"
                    android:text="@string/set"
                    android:textColor="@color/orange3" />

                <EditText
                    android:id="@+id/at_end_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:inputType="date" />
            </RelativeLayout>

            <!-- Other details -->

            <TextView
                style="@style/label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/details" />

            <EditText
                android:id="@+id/treatment_details"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:inputType="textMultiLine"
                android:singleLine="true" />

            <!-- Repetition -->

            <CheckBox
                android:id="@+id/repeat_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repetition"
                android:textColor="@color/orange3" />

            <Spinner
                android:id="@+id/repetition_number_spinner"
                style="@color/orange3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/repetition_number_array" />

            <Spinner
                android:id="@+id/repetition_string_spinner"
                style="@color/orange3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/repetition_string_array" />

            <!-- Reminders -->

            <TextView
                style="@style/label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminders" />

            <Spinner
                android:id="@+id/reminders_spinner"
                style="@color/orange3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/reminders_array" />

            <!-- Add Button -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="1.0dip"
                android:paddingLeft="4.0dip"
                android:paddingRight="4.0dip"
                android:paddingTop="5.0dip" >

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:text="@string/save"
                    android:textColor="@color/orange3" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:text="@string/cancel"
                    android:textColor="@color/orange3" />
            </LinearLayout>
        </LinearLayout>

        <!-- Edit treatment Form Ends -->
    </RelativeLayout>

</ScrollView>