<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff" >

        <!-- Edit child Form -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Name Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/child_name"
                style="@style/label" />

            <EditText
                android:id="@+id/edit_child_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <!-- Birthdate Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/child_birthdate"
                style="@style/label" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="selectDate" >

                <Button
                    android:id="@+id/edit_imageButton1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignBottom="@+id/edit_child_birthdate"
                    android:layout_toRightOf="@+id/edit_child_birthdate"
                    android:cropToPadding="true"
                    android:onClick="selectDate"
                    android:text="@string/edit" />

                <EditText
                    android:id="@+id/edit_child_birthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:ems="15"
                    android:inputType="date" />
            </RelativeLayout>
            
            <!-- Picture Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/child_picture"
                style="@style/label" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/edit_child_picture_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/child_picture_description"
                    android:scaleType="fitStart" />

                <Button
                    android:id="@+id/edit_pictureButton1"
                    android:layout_width="60dip"
                    android:layout_height="37dip"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="2dp"
                    android:text="@string/add"
                    android:textColor="@color/orange3" />

            </RelativeLayout>
            <!-- Picture Label -->

            <!-- Nickname Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/child_nickname"
                style="@style/label" />

            <EditText
                android:id="@+id/edit_child_nickname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:inputType="textMultiLine"
                android:singleLine="true" />
            
            <!-- Other details -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/child_details"
                style="@style/label" />

            <EditText
                android:id="@+id/edit_child_details"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:inputType="textMultiLine"
                android:singleLine="true" />

            <RelativeLayout
                android:id="@+id/InnerRelativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="1.0dip"
                    android:paddingLeft="4.0dip"
                    android:paddingRight="4.0dip"
                    android:paddingTop="5.0dip" >

                    <Button
                        android:id="@+id/btnSave"
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0"
                        android:text="@string/save"
                        android:textColor="@color/orange3" />

                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0"
                        android:text="@string/cancel"
                        android:textColor="@color/orange3" />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>